<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view_containervlxi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/navigation_view_headerlxi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header"
        android:gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/header_text_toplxi"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="44dp"
                android:src="@drawable/edu"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_text_bottomlxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/calibri"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:fitsSystemWindows="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_apphomelxi"
                style="@style/NavigationView.Item.Button"
                android:background="@drawable/btn_transparent_light_lxi">

                <ImageView
                    android:id="@+id/img_apphomeslxi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_apphome_red_lxi"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_apphomelxi"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginLeft="32dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:text="@string/menu_item_home_label"
                    android:textColor="@color/nv_text_theme1"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_rate_uslxi"
                style="@style/NavigationView.Item.Button"
                android:background="@drawable/btn_transparent_light_lxi">

                <ImageView
                    android:id="@+id/img_rate_uslxi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_rate_review_lxi"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_rate_uslxi"

                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginLeft="32dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:text="@string/rateus"
                    android:textColor="@color/nv_text_theme1"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_sharelxi"
                style="@style/NavigationView.Item.Button"
                android:background="@drawable/btn_transparent_light_lxi">

                <ImageView
                    android:id="@+id/img_sharelxi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_share_lxi"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_sharelxi"

                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginLeft="32dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:text="@string/shareapp"
                    android:textColor="@color/nv_text_theme1"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_privacy_policylxi"
                style="@style/NavigationView.Item.Button"
                android:background="@drawable/btn_transparent_light_lxi"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/img_privacy_policylxi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_privacy_lxi"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_privacy_policyslxi"

                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginLeft="32dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:text="@string/privacypolicy"
                    android:textColor="@color/nv_text_theme1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_more_applxi"
                style="@style/NavigationView.Item.Button"
                android:background="@drawable/btn_transparent_light_lxi"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/img_more_applxi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_more_lxi"
                    app:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_more_applxi"

                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginLeft="32dp"
                    android:fontFamily="@font/calibri"
                    android:gravity="center_vertical"
                    android:text="@string/moreapps"
                    android:textColor="@color/nv_text_theme1"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>